--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "Alifa-UploadBot",
   "description": "Telegram's best open source URL uploader bot. Create your fork now.",
-  "logo": "",
+  "logo": "https://graph.org/file/3c93dc8b64dd96820b470.jpg",
   "keywords": [
     "telegram",
     "best",
